// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Droplines should render correctly 1`] = `
<custom>
  <line
    class="dropline"
    style="stroke: red;"
    x1="50"
    x2="50"
    y1="50"
    y2="50"
  />
  <line
    class="dropline"
    style="stroke: red;"
    x1="50"
    x2="50"
    y1="50"
    y2="50"
  />
</custom>
`;

exports[`Droplines should render just horizontal lines correctly 1`] = `
Object {
  "current": <custom>
    <line
      class="dropline"
      style="stroke: red;"
      x1="50"
      x2="50"
      y1="50"
      y2="50"
    />
  </custom>,
}
`;

exports[`Droplines should render just vertical lines correctly 1`] = `
Object {
  "current": <custom>
    <line
      class="dropline"
      style="stroke: red;"
      x1="50"
      x2="50"
      y1="50"
      y2="50"
    />
  </custom>,
}
`;

exports[`Droplines should skip if there is no layer avaliable 1`] = `
Object {
  "current": null,
}
`;
